# sot_robot

./: .gitignore  CMakeLists.txt  CMakeListsnew.txt  README.md  controller_plugins.xml  gui_plugin.xml  manifest.xml  package.xml  setup.py  sot_ur_bringup_real_sim_noring.launch  youbot_sot_controller.yaml
include/sot_robot/: sot_pr2_controller_threaded.h  sot_robot_controller_threaded.h  sot_robot_controller_threaded_generic.h  sot_robot_device.h  timer_utility.hh
include/sot_youbot/: yb_controlnode_thread.hh  youbot_controller_node.hh  youbot_controller_plugin.h  youbot_controller_plugin.h~  youbot_controller_plugin_threaded.h  youbot_device.h  youbot_device.h~  youbot_sot_controller.h  youbot_sot_controller.h~  youbot_sot_controller_threaded.h
launch/: gazebo.launch  sot_pr2.launch  sot_pr2.launch~  spawn_pr2_controller.launch  spawn_pr2_controller.launch~  spawn_youbot_controller.launch  spawn_youbot_controller.launch~
launch/pr2/: display.launch  dummy.lauch  emptyworld.launch  pr2.rviz  pr2_in_kitchen.launch  pr2_nocontrollers.launch  sot_pr2_bringup_sim.launch  sot_pr2_check.launch  sot_pr2_nocontrollers.launch  sot_pr2_nocontrollers_latest.launch  spawn_pr2_controller.launch  upload_pr2.launch
launch/ur/: sot_ur_bringup_real_final.launch  sot_ur_bringup_real_sim.launch  sot_ur_bringup_real_sim_development.launch  sot_ur_bringup_sim.launch  sot_ur_bringup_skin_sim.launch  sot_ur_bringup_skin_sim_development.launch  sot_ur_nocontrollers.launch  sot_ur_nocontrollers_development.launch  sot_ur_nocontrollers_real.launch  spawn_ur_controller.launch  spawn_ur_controller_development.launch  upload_ur.launch  upload_ur_ring_forearm.launch  upload_ur_ring_forearm_fixed.launch  ur_nocontrollers.launch  ur_upload.launch
launch/ur/2beEliminated/: sot_tom_nocontrollers.launch  sot_tom_nocontrollers_kws.launch  sot_ur_nocontrollers_kws.launch  spawn_tom_controller.launch  upload_lacqey.launch  ur_controller.launch
launch/youbot/: spawn_youbot_controller.launch
resource/: moveitgui.ui  rpc.rviz  rpc_gui.perspective  rpc_gui.ui  temp_gui.ui
robot/: pr2_sot_controller.yaml  ur_sot_controller.yaml  ur_sot_controller_0.yaml  ur_sot_controller_development.yaml  youbot_sot_controller.yaml
robot/urdf/: pr2_sot.urdf.xacro
script/: JTS_client.py  commands.txt  map_joint_trajectory.py  pinocchio_check.py  ring_poses_xyzquat.npz  ring_poses_xyzrpy.npz  rpc.py  rqt_rpc  rqt_rpc_robot  script.py  script_check.py  script_check_nocontroller.py  script_check_noroscontroller.py  simple_script_actionserver.py  skin_ring_publisher.py  skin_sensor_simu.py  sot-collision.py  sot-collision_debug.py  sot_collision_real_ring_urdf.py  sot_collision_real_ring_urdf_development.py  sot_collision_sim.py
script/installation/: Makefile  config.sh
script/pr2/: joint_posture_task.py  kineo_planning.py  loadcontroller.py  sot_interface.py
src/: CMakeLists.txt  CMakeLists.txt~  pos_sot_robot_controller_threaded_generic.cpp  sot_pr2_controller_threaded.cpp  sot_robot_controller_threaded.cpp  sot_robot_controller_threaded_generic.cpp  sot_robot_device.cpp  timer_utility.cpp  vel_sot_robot_controller_threaded_generic.cpp  yb_controlnode_thread.cpp  youbot.cpp  youbot_controller_node.cpp  youbot_controller_plugin.cpp  youbot_controller_plugin.cpp~  youbot_controller_plugin_threaded.cpp  youbot_device.cpp  youbot_device.cpp~  youbot_sot_controller.cpp  youbot_sot_controller.cpp~  youbot_sot_controller_threaded.cpp
src/dynamic_graph/sot/dynamics/: mobile_robot.py  mobile_robot_v3.py
src/dynamic_graph/sot/pr2/: prologue.py  robot.py  script.py  script_real (copy).py  script_real.py  sot_interface.py
src/dynamic_graph/sot/ur/: prologue.py  prologue_development.py  prologue_tom.py  robot.py  robot_v3.py  robot_v3_development.py  script.py  sot_interface.py  sot_interface_tom.py  sot_interface_v3.py  sot_interface_v3_development.py  tom.py  tom_v3.py  trajectories.py
src/dynamic_graph/sot/youbot/: observations  prologue.py  prologue.py~  robot.py  robot.py~  yb.py  yb_workingbasecollisonavoidance.py  yb_workingbasecollisonavoidance_real.py  youbot_tasks.py
src/rqt_rpc/: rpc_config.xml  rpc_module.py  rpc_module_real.py  rw_script.py
srdf/: pr2_sot.srdf  ur5_robot_with_ring_forearm.srdf  youbot.srdf
urdf/: Notes  pr2_base.urdf.xacro  pr2_sot.urdf  pr2_sot.urdf.xacro  skin.urdf.xacro  skin_sim.urdf.xacro  skinparams  ur5_robot.urdf.xacro  ur5_robot_with_ring_forearm.urdf  ur5_robot_with_ring_forearm.urdf.xacro  ur5_robot_with_ring_forearm_fixed_link.urdf  ur5_robot_with_ring_forearm_fixed_link.urdf.xacro  youbot.urdf
urdf/ur/: skin_fixed_link.urdf.xacro  skin_sim.urdf.xacro  ur5_robot_with_ring_forearm.urdf  ur5_robot_with_ring_forearm.urdf.xacro  ur5_robot_with_ring_forearm_sim.urdf
