<package>
  <name>sot_youbot</name>
  <version>2.0.0</version>
  <description>

      sot_youbot

  </description>

  <maintainer email="ngiftsun@laas.fr">ngiftsun@laas.fr</maintainer>
  <author email="ngiftsun@laas.fr">ngiftsun@laas.fr</author>

  <license>LGPL</license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend> 

  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>brics_actuator</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pr2_controller_interface</build_depend>
  <build_depend>pr2_mechanism_model</build_depend>
  <build_depend>pr2_controller_manager</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>control_toolbox</build_depend>


  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pr2_controller_manager</run_depend>
  <run_depend>pr2_controller_interface</run_depend>
  <run_depend>pr2_mechanism_model</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>control_toolbox</run_depend>



</package>
