<package>
  <name>sot_robot</name>
  <version>2.0.0</version>
  <description>

      sot_robot

  </description>

  <maintainer email="ngiftsun@laas.fr">ngiftsun@laas.fr</maintainer>
  <author email="ngiftsun@laas.fr">ngiftsun@laas.fr</author>

  <license>LGPL</license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend> 

  <build_depend>controller_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>forward_command_controller</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>brics_actuator</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pr2_controller_interface</build_depend>
  <build_depend>pr2_controller_manager</build_depend>
  <build_depend>pr2_mechanism_model</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>rqt_gui_py</build_depend>

  <run_depend>pr2_controller_interface</run_depend>
  <run_depend>pr2_controller_manager</run_depend>
  <run_depend>pr2_mechanism_model</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>s
  <run_depend>controller_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>urdf</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>rqt_gui_py</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
    <pr2_controller_interface plugin="${prefix}/controller_plugins.xml"/>
		<rqt_gui plugin="${prefix}/gui_plugin.xml"/>
  </export>




</package>
